# connect-hub

./: .env.example  .gitignore  MODULE.bazel  README.md  go.mod
.github/workflows/: build.yml  ci.yml
cmd/: BUILD  main.go  main_test.go
deployments/docker/: Dockerfile
deployments/k8s/: deployment.yaml  ingress.yaml  service.yaml
pkg/: BUILD.bak
